# CV1

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Asignment2/: CMakeLists.txt  README.md  instructions.md  submission.cpp
Asignment2/headers/: ImageCropper.h
Asignment2/src/: ImageCropper.cpp
Assignment2/: CMakeLists.txt  README.md  instructions.md  submission.cpp
Assignment3/: CMakeLists.txt  README.md  instructions.md  submission.cpp
BitWiseOperations/: CMakeLists.txt
BitWiseOperations/headers/: Base.h
BitWiseOperations/src/: main.cpp
CVI/ImagesAsMatrix/: CMakeLists.txt
CVI/ImagesAsMatrix/computer_vision/: CMakeLists.txt  Main.cpp
CVI/ImagesAsMatrix/computer_vision/headers/: Base.h
ImageOperations/: CMakeLists.txt
ImageOperations/headers/: Base.h
ImageOperations/src/: Base.cpp  main.cpp
MathOperationsOnImage/: CMakeLists.txt
MathOperationsOnImage/headers/: Base.h  ContrastAndBrightness.h
MathOperationsOnImage/src/: Base.cpp  ContrastAndBrightness.cpp  main.cpp
SunGlassFilter/: CMakeLists.txt
SunGlassFilter/src/: main.cpp
imageAnnotation/: CMakeLists.txt
imageAnnotation/headers/: Base.h
imageAnnotation/src/: main.cpp
videos/: output.avi
week2-cpp/: CMakeLists.txt  VideoRead.cpp  VideoWrite.cpp  adding_a_trackbar_as_controller.cpp  dataPath.hpp  using_the_keyboard_as_input_device.cpp  using_the_mouse_for_annotation.cpp
